# tree-sitter-groovy

./: .gitignore  CMakeLists.txt  Cargo.toml  Justfile  LICENSE.md  Makefile  Package.swift  README.md  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-tree-sitter-groovy.pc.in
bindings/c/tree_sitter/: tree-sitter-tree-sitter-groovy.h
bindings/go/: binding.go  binding_test.go
bindings/python/tree_sitter_tree_sitter_groovy/: __init__.py  binding.c
bindings/swift/TreeSitterTreeSitterGroovyTests/: TreeSitterTreeSitterGroovyTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: comment.test  enhanced_for_statement.test  if_statement.test  method_invocation.test  string_literal  variable_declaration.test
